force-app/main/default/objects/Archival_Log__c/Archival_Log__c.object-meta.xml
<CustomObject>
    <label>Archival Log</label>
    <nameField>
        <displayFormat>ARC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Archival Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>