force-app/main/default/objects/Archival_Log__c/fields/Archive_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Archive_Batch_Id__c</fullName>
    <label>Archive Batch Id</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>