force-app/main/default/objects/Archival_Log__c/fields/Archived_Location__c.field-meta.xml
<CustomField>
    <fullName>Archived_Location__c</fullName>
    <label>Archived Location</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>