force-app/main/default/objects/Archival_Log__c/fields/Archived_Object__c.field-meta.xml
<CustomField>
    <fullName>Archived_Object__c</fullName>
    <label>Archived Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>