force-app/main/default/objects/Archival_Log__c/fields/Archived_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Archived_Record_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Archived Record Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>