force-app/main/default/objects/Archival_Log__c/fields/CheckSum__c.field-meta.xml
<CustomField>
    <fullName>CheckSum__c</fullName>
    <label>CheckSum</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>