force-app/main/default/objects/Archival_Log__c/fields/Hard_Deleted_Date__c.field-meta.xml
<CustomField>
    <fullName>Hard_Deleted_Date__c</fullName>
    <label>Hard Deleted Date</label>
    <type>DateTime</type>
</CustomField>