force-app/main/default/objects/Archival_Log__c/fields/Original_CreatedBy_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_CreatedBy_Name__c</fullName>
    <label>Original CreatedBy Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>