force-app/main/default/objects/Archival_Log__c/fields/Original_CreatedById__c.field-meta.xml
<CustomField>
    <fullName>Original_CreatedById__c</fullName>
    <label>Original CreatedById</label>
    <length>18</length>
    <type>Text</type>
</CustomField>