force-app/main/default/objects/Archival_Log__c/fields/Original_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>Original_CreatedDate__c</fullName>
    <label>Original CreatedDate</label>
    <type>DateTime</type>
</CustomField>