force-app/main/default/objects/Archival_Log__c/fields/Parent_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Id__c</fullName>
    <externalId>true</externalId>
    <label>Parent Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>