force-app/main/default/objects/Archival_Log__c/fields/Parent_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Name__c</fullName>
    <label>Parent Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>