force-app/main/default/objects/Archival_Log__c/fields/Soft_Archived_Date__c.field-meta.xml
<CustomField>
    <fullName>Soft_Archived_Date__c</fullName>
    <label>Soft Archived Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>