force-app/main/default/objects/Archival_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Archived_Object__c</columns>
    <columns>Status__c</columns>
    <columns>Soft_Archived_Date__c</columns>
    <columns>Hard_Deleted_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>